--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,9 +7,9 @@ on:
         description: Beanstalk environment (Optional - leave it blank to deploy to production)
         required: false
       run_tests: 
-        description: Run tests (ignored on master branch)
+        description: "Run tests (ignored on master branch: 1 = true, 0 = false)"
         required: true
-        default: true
+        default: 1
       
 jobs:
   tests:
