--- a/.github/workflows/deploy-main-replica.yml
+++ b/.github/workflows/deploy-main-replica.yml
@@ -17,8 +17,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-18.04
-    #if: ${{ github.event.workflow_run.conclusion == 'success' || github.event.inputs.invalidate_cache > 0 }}
-    if: ${{ github.event.inputs.invalidate_cache > 0 }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event.inputs.invalidate_cache != '' }}
     timeout-minutes: 20
 
     steps:
