--- a/.github/workflows/pr_comment.yml
+++ b/.github/workflows/pr_comment.yml
@@ -1,7 +1,7 @@
 name: pr comment
 
 on:
-  pull_request:
+  pull_request_old:
     types: [opened]
   issue_comment:
     types: [created, edited, deleted]
