--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,10 +3,10 @@ name: RSpec
 on:
   pull_request:
     branches: [main]
-    types: [ready_for_review]
 
 jobs:
   tests:
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     timeout-minutes: 15
 
